# lockmypix-decrypter

./: README.md  app.py  appico.icns  decrypt.py  decrypt.spec  lockmypix-decrypter-FIXED-DIALOG.py  lockmypix-decrypter.py  lockmypix-decrypter.py.bak2  lockmypix-decrypter.spec  lockmypix-unlocker.py  lockmypix-unlocker.py.bak  py_to_exe.yaml  pyproject.toml  requirements.txt  resources.qrc  setup.py  venv-help.txt
.github/workflows/: gen_req.yaml  py2app.yaml  py_to_app.yml  py_to_exe.yaml  requirements.yml
ai/: README.md  install.bat  install.sh  lockmypix_decryptor.py  requirements.txt  test_decryptor.py
assets/: icon.icns  pyproject.toml
workflows/: py_to_app.yml
