[build-system]
requires = ["setuptools < 81"]
build-backend = "setuptools.build_meta"

[project]
name = "LockMyPix Unlocker"
version = "0.0.1"
requires-python = "=3.8"
authors = [
    {name = "bekdan1988", email = "bekdan1988@gmail.com"}
]
maintainers = [
  {name = "bekdan1988", email = "bekdan1988@gmail.com"}
]
description = "Unlocks 6zu files created with LockMyPix"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license-files = ["LICEN[CS]E.*"]
keywords = ["LockMyPix"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/bekdan1988/lockmypix-unlocker"

